sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:5: error: not found: value swapped
	while (swapped) {
               ^AlgBubbleSort1:7: error: not found: value swapped
  	swapped = false
        ^AlgBubbleSort1:12: error: Boolean does not take parameters
      	echange(i, i+1)
               ^AlgBubbleSort1:13: error: not found: value swapped
      	swapped = true
        ^